--- a/config/config.env
+++ b/config/config.env
@@ -1,2 +1,6 @@
 NODE_ENV=development
 PORT=5000
+MONGO_URI=mongodb+srv://theniikhil:theniikhil@cluster0-vhqs2.mongodb.net/devcamper?retryWrites=true&w=majority
+
+GEOCODER_PROVIDER=mapquest
+GEOCODER_API_KEY=skYBLUTjO6CLUrrQO0nre6XPRkegGMTX
