--- a/config/config.env
+++ b/config/config.env
@@ -4,3 +4,6 @@ MONGO_URI=mongodb+srv://theniikhil:theniikhil@cluster0-vhqs2.mongodb.net/devcamp
 
 GEOCODER_PROVIDER=mapquest
 GEOCODER_API_KEY=skYBLUTjO6CLUrrQO0nre6XPRkegGMTX
+
+FILE_UPLOAD_PATH=./public/uploads
+MAX_FILE_UPLOAD=1000000
