auth, ownership, roles added to courses, bootcamps

--- a/config/config.env
+++ b/config/config.env
@@ -7,3 +7,14 @@ GEOCODER_API_KEY=skYBLUTjO6CLUrrQO0nre6XPRkegGMTX
 
 FILE_UPLOAD_PATH=./public/uploads
 MAX_FILE_UPLOAD=1000000
+
+JWT_SECRET=hfhgsdjbsfbasbfsnfgwubf
+JWT_TOKEN_EXPIRY=30d
+JWT_COOKIE_EXPIRY=30
+
+SMTP_HOST=smtp.mailtrap.io
+SMTP_PORT=2525
+SMTP_USERNAME=70a619f4f28fd9
+SMTP_PASSWORD=39e9dfc33da29b
+FROM_EMAIL=noreply@devcamper.io
+FROM_NAME=DevCamper
