--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   "author": "Nikhil Parashar",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.7-alpha.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.16",
     "morgan": "^1.10.0",
     "node-geocoder": "^3.27.0",
+    "nodemailer": "^6.4.8",
     "slugify": "^1.4.0"
   },
   "devDependencies": {
